--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
    email = pahindman@user.noreply.github.com
 [core]
    excludesfile=~/.gitignore
+	editor = vim
 [branch]
    autosetupmerge=always
    autosetuprebase=local
