--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 [core]
 	excludesfile=~/.gitignore
 [branch]
-	autosetupmerge=always
+	autosetupmerge=true
 	autosetuprebase=always
 [push]
 	default = simple
