Change autosetupmerge to be 'inherit'
This value matches better with how I try to use branches. I almost
always want new branches to have upstreams, but I usually want to use
the parent branch's upstream as my upstream, rather than using the
parent as the upstream (as is the case when using the 'always' option).

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 [core]
 	excludesfile=~/.gitignore
 [branch]
-	autosetupmerge=true
+	autosetupmerge=inherit
 	autosetuprebase=always
 [push]
 	default = current
